--- a/designs/sign-in.html
+++ b/designs/sign-in.html
@@ -46,7 +46,7 @@
             >
           </div>
           <!-- PLACEHOLDER DUE TO STATIC SITE -->
-          <a href="./user.html" class="sign-in-button">Sign In</a>
+          <!-- <a href="./user.html" class="sign-in-button">Sign In</a> -->
           <!-- SHOULD BE THE BUTTON BELOW -->
           <!-- <button class="sign-in-button">Sign In</button> -->
           <!--  -->
